fixed spacing issue on rating feed

--- a/app/styles/BirdScoreRow.scss
+++ b/app/styles/BirdScoreRow.scss
@@ -2,16 +2,16 @@
 
 .BirdScoreRow {
   display: flex;
-  align-items: center;
   
   &__score {
-    display: inline-block;
     font-weight: 700;
     margin-right: 1em;
+    width: 5%;
   }
 
   &__comment {
     padding-left: 1em;
     border-left: 1px solid $color-primary;
+    width: 95%;
   }
 }
